syntax = "proto3";

package storage;

import "google/protobuf/empty.proto";

service Repository {
    rpc Create (CreateRequest) returns (google.protobuf.Empty);
    rpc SetDescriptions (SetDescriptionRequest) returns (google.protobuf.Empty);
}

service Branch {
    rpc List(BranchesRequest) returns (BranchesResponse);
}

service Commit {
    rpc Create(CommitRequest) returns (CommitResponse);
}

message CreateRequest {
    string owner = 1;
    string name = 2;
}

message SetDescriptionRequest {
    string owner = 1;
    string name = 2;
    string description = 3;
}

message BranchesRequest {
    string owner = 1;
    string name = 2;
}

message BranchResponse {
    string name = 1;
    string sha1 = 2;
    string type = 3;
}

message BranchesResponse {
    repeated BranchResponse branch = 1;
}

message CommitRequest {
    string owner = 1;
    string name = 2;
    string rev = 3;
}

message CommitResponse {
    string Hash = 1;
    string Tree = 2;
    string Parent = 3;
    string Message = 4;
    string Author = 5;
    string AuthorEmail = 6;
    int64 AuthorDate = 7;
    string Committer = 8;
    string CommitterEmail = 9;
    int64 CommitterDate = 10;
}
