syntax = "proto3";

package storage;

service Storage {
    rpc Create (CreateRequest) returns (EmptyResponse);
    rpc SetDescriptions (SetDescriptionRequest) returns (EmptyResponse);
    rpc Tree (TreeRequest) returns (TreeRespone);
}

message EmptyResponse {
}

message CreateRequest {
    string owner = 1;
    string name = 2;
}

message SetDescriptionRequest {
    string owner = 1;
    string name = 2;
    string description = 3;
}

message TreeRequest {
    string owner = 1;
    string name = 2;
    string branch = 3;
}

message TreeRespone {
    repeated TreeObjectResponse objects = 1;
}

message TreeObjectResponse {
    string Mode = 1;
    string Type = 2;
    string Object = 3;
    string File = 4;
    CommitResponse Commit = 5;
}

message CommitResponse {
    string Hash = 1;
    string Tree = 2;
    string Parent = 3;
    string Subject = 4;
    string Author = 5;
    string AuthorEmail = 6;
    int64 AuthorDate = 7;
    string Committer = 8;
    string CommitterEmail = 9;
    int64 CommitterDate = 10;
}
